--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation group: 'org.ehcache', name: 'ehcache', version: '3.10.0'
 	
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.1'
-//	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.1'
