--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.1'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
 	
-	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
+//	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.29'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.1'
 	
 	
