--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
 	
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '2.7.1'
 	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-orgjson', version: '0.11.5'
+	
+	
 	
 //	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.29'
