--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3307/rate_limit?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root2022
-spring.datasource.driver-class-name =com.mysql.jdbc.Driver
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
+
+springsecurity.rest.token.storage.jwt.secret = jwtSecretKeyRateLimiting09082022123456789012
