--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,10 @@ dependencies {
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
 	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-orgjson', version: '0.11.5'
 	
-	
-	
 //	implementation group: 'mysql', name: 'mysql-connector-java', version: '5.1.49'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.29'
 	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.7.1'
-	
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '2.7.3'
 	
 }
 
