Se agrega rabbitmq

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,9 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
 
 springsecurity.rest.token.storage.jwt.secret = jwtSecretKeyRateLimiting09082022123456789012
+
+spring.rabbitmq.host = 127.0.0.1
+spring.rabbitmq.port = 5672
+spring.rabbitmq.username = guest
+spring.rabbitmq.password = guest
+
